# student_mgmt

./: CMakeLists.txt  LICENSE  README.md  README.txt
include/: constants.h  database.h  helpers.h  student.h
src/: database.c  helpers.c  main  main.c
